# french-pronunciation-studio

./: .gitignore  Package.swift  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.codex/environments/: environment.toml
Sources/FrenchPronunciationStudio/App/: FrenchPronunciationStudioApp.swift
Sources/FrenchPronunciationStudio/Services/: KokoroModelManager.swift  SpeechService.swift
Sources/StudioCore/: Models.swift  PronunciationAnalysis.swift  SentenceChunker.swift  SherpaKokoroManifest.swift
Sources/StudioCoreChecks/: main.swift
backend/: chatterbox_tts_server.py  chatterbox_tts_server_test.py  preview_tts_server.py  torch-overrides.txt
models/: README.md
script/: build_and_run.sh
scripts/: start-tts-backend.sh
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  tts_sidecar.rs
src/components/: FeedbackPanel.tsx  LabFlow.test.tsx  PracticeWorkspace.test.tsx  PracticeWorkspace.tsx  SelectField.tsx  SessionList.test.tsx  SessionList.tsx  TextImport.tsx  TransportBar.tsx  WaveformPair.tsx  waveformPeaks.test.ts  waveformPeaks.ts
src/data/: inMemoryRepository.test.ts  inMemoryRepository.ts  repository.ts  schema.sql
src/domain/: comparison.test.ts  comparison.ts  sentenceChunker.test.ts  sentenceChunker.ts  types.ts
src/modelAdapters/: httpTtsAdapter.test.ts  httpTtsAdapter.ts  mockAdapters.test.ts  mockAdapters.ts  types.ts
src/styles/: app.css  appCss.test.ts  tokens.css
src/test/: setup.ts
(+5 files in other folders)
