[package]
name = "french-pronunciation-studio"
version = "0.1.0"
description = "Local French pronunciation studio"
authors = ["Yotta"]
edition = "2021"

[lib]
name = "french_pronunciation_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
